<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WeJam</string>
    <string name="wejam_logo">wejam_logo</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="mapbox_access_token" tools:ignore="Typos">pk.eyJ1Ijoiam9objM1MSIsImEiOiJjbGhudHpkY20xcGo1M2xueDM4dXZlNWRhIn0.YM0uZw3BJ01mdsH4XpBezQ</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">login</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="login_with_google">Login with Google</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="banner">banner</string>
    <string name="edit">Edit</string>
    <string name="settings">Settings</string>
    <string name="profile_image">profile image</string>
    <string name="real_name">Real Name</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="bottom_sheet_grapple">bottom sheet grapple</string>
    <string name="media">Media</string>
    <string name="events">Events</string>
    <string name="bio">Bio</string>
    <string name="socials">Socials</string>
    <string name="url">URL</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="back">Back</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="connections">Connections</string>
    <string name="connect">Connect</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friends">Friends</string>
    <string name="popular">Popular</string>
    <string name="event_type">Event Type</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="create_event">Create Event</string>
    <string name="name">Name</string>
    <string name="jam_session">Jam Session</string>
    <string name="concert">Concert</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="create">Create</string>
    <string name="event_name">Event Name</string>
    <string name="people">People</string>
    <string name="organizer">Organizer</string>
    <string name="i_m_in">I\'m in!</string>
    <string name="leave_event">Leave Event</string>
    <string name="delete_event">Delete Event</string>
    <string name="friend">Friend</string>
    <string name="remove">Remove</string>
    <string name="message">Message</string>
    <string name="upcoming">Upcoming</string>
    <string name="saved">Saved</string>
    <string name="attending">Attending</string>
    <string name="created">Created</string>
    <string name="requested">Requested</string>
    <string name="accept">Accept</string>
    <string name="messages">Messages</string>
    <string name="requests">Requests</string>
    <string name="deny">Deny</string>
    <string name="you_have_no_upcoming_events">You have no upcoming events</string>
    <string name="your_friends_aren_t_attending_any_events">Your friends aren\'t attending any events</string>
    <string name="you_dont_have_any_saved_events">You don\'t have any saved events</string>
    <string name="no_friends">No friends :(</string>
    <string name="no_conversations">No conversations</string>
    <string name="no_friend_requests">No friend requests :(</string>
</resources>