<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.LoginFragment"
    android:id="@+id/fragmentLogin">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/wejam_logo" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:drawableEnd="@drawable/baseline_email_24"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/input"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:autofillHints="emailAddress"/>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="@drawable/input"
        android:drawableEnd="@drawable/baseline_key_24"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput"
        android:autofillHints="password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgotPwdBtn"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:background="#00FFFFFF"
        android:text="@string/forgot_password"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginStart="120dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button"
        android:textColor="@color/white"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signupBtn"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:background="#00FFFFFF"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:rippleColor="#00FFFFFF" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/googleBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login_with_google"
        android:background="@drawable/button"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_google"
        android:drawablePadding="-20dp"
        android:paddingStart="30dp"
        android:paddingEnd="5dp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>