<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="160dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_event"
                android:textSize="20sp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <EditText
                android:id="@+id/eventName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/name"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/eventName">
                <RadioButton
                    android:id="@+id/jamSession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/jam_session"
                    android:buttonTint="@color/black"
                    android:fontFamily="@font/roboto_medium"/>

                <RadioButton
                    android:id="@+id/concert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/concert"
                    android:buttonTint="@color/black"
                    android:fontFamily="@font/roboto_medium"/>
            </RadioGroup>

            <EditText
                android:id="@+id/calendarInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:inputType="date"
                android:autofillHints="date"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/date"
                app:layout_constraintTop_toBottomOf="@id/radioGroup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <EditText
                android:id="@+id/timeInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:inputType="time"
                android:autofillHints="time"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/time"
                app:layout_constraintTop_toBottomOf="@id/calendarInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <EditText
                android:id="@+id/locationInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:inputType="textPostalAddress"
                android:autofillHints="address"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/location"
                app:layout_constraintTop_toBottomOf="@id/timeInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <LinearLayout
                android:id="@+id/buttonContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/locationInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/createBtn"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_gradient"
                    android:text="@string/create"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_marginEnd="20dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancelBtn"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_gradient_outline"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_medium"
                    android:elevation="0dp"
                    android:shadowDy="0"
                    android:shadowDx="0"
                    android:shadowRadius="0"
                    android:shadowColor="@color/transparent"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>